# taskstore

./: .otto.yml  Cargo.toml  README.md
.github/workflows/: binary-release.yml  ci.yml
crates/taskstore/: Cargo.toml  build.rs
crates/taskstore-async/: Cargo.toml
crates/taskstore-async/src/: error.rs  lib.rs  options.rs  reader.rs  store.rs  tests.rs  writer.rs
crates/taskstore-async/tests/: list_tolerant.rs  reader.rs  writer.rs
crates/taskstore-traits/: Cargo.toml
crates/taskstore-traits/src/: corruption.rs  filter.rs  lib.rs
crates/taskstore/examples/: 01_basic_crud.rs  02_filtering.rs  03_custom_records.rs  04_sync_and_rebuild.rs  05_multiple_collections.rs  06_relationships.rs  07_status_workflow.rs  08_event_log.rs  09_concurrent_access.rs  10_git_integration.rs  11_corruption_audit.rs
crates/taskstore/src/: corruption.rs  error.rs  jsonl.rs  lib.rs  main.rs  query.rs  store.rs
crates/taskstore/src/store/: list_tolerant_tests.rs
docs/: traits-crate-extraction.md
docs/design/: 2026-04-13-create-many.md  2026-04-19-traits-crate-extraction.md  2026-04-20-taskstore-async.md  2026-04-25-list-tolerant.md
src/: store.rs
