[package]
name = "taskstore-async"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Async-native wrapper over taskstore with writer thread + reader connection pool"

[dependencies]
taskstore = { path = "../taskstore", version = "0.3" }
taskstore-traits = { path = "../taskstore-traits", version = "0.1" }

eyre = "0.6"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "rt-multi-thread"] }
